# prometheus-deploy-practice

./: README.md  alert.rules.yml  docker-compose.yml  prometheus.yml
alertmanager/: alertmanager.yml
gmail_webhook/: Dockerfile  get_credentials.py  mail_service.py  pyproject.toml
